infrastructure/cdk.out/FOD-Network-dev.template.json
{
 "Description": "Network infrastructure for FOD system",
 "Resources": {
  "FODVPC50BE1884": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "FOD-Network-dev/FOD-VPC"
     },
     {
      "Key": "Project",
      "Value": "Snapdragon-FOD"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/Resource"
   }
  },
  "FODVPCPublicSubnet1SubnetA8F3BAEC": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "FOD-Network-dev/FOD-VPC/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "Snapdragon-FOD"
     }
    ],
    "VpcId": {
     "Ref": "FODVPC50BE1884"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/PublicSubnet1/Subnet"
   }
  },
  "FODVPCPublicSubnet1RouteTableA88839B7": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "FOD-Network-dev/FOD-VPC/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "Snapdragon-FOD"
     }
    ],
    "VpcId": {
     "Ref": "FODVPC50BE1884"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/PublicSubnet1/RouteTable"
   }
  },
  "FODVPCPublicSubnet1RouteTableAssociation58C7EDC3": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "FODVPCPublicSubnet1RouteTableA88839B7"
    },
    "SubnetId": {
     "Ref": "FODVPCPublicSubnet1SubnetA8F3BAEC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/PublicSubnet1/RouteTableAssociation"
   }
  },
  "FODVPCPublicSubnet1DefaultRoute2B82533A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "FODVPCIGW1032A217"
    },
    "RouteTableId": {
     "Ref": "FODVPCPublicSubnet1RouteTableA88839B7"
    }
   },
   "DependsOn": [
    "FODVPCVPCGW5DD399D6"
   ],
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/PublicSubnet1/DefaultRoute"
   }
  },
  "FODVPCPublicSubnet1EIPCDD7F476": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "FOD-Network-dev/FOD-VPC/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "Snapdragon-FOD"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/PublicSubnet1/EIP"
   }
  },
  "FODVPCPublicSubnet1NATGateway2F221802": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "FODVPCPublicSubnet1EIPCDD7F476",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "FODVPCPublicSubnet1SubnetA8F3BAEC"
    },
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "FOD-Network-dev/FOD-VPC/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "Snapdragon-FOD"
     }
    ]
   },
   "DependsOn": [
    "FODVPCPublicSubnet1DefaultRoute2B82533A",
    "FODVPCPublicSubnet1RouteTableAssociation58C7EDC3"
   ],
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/PublicSubnet1/NATGateway"
   }
  },
  "FODVPCPublicSubnet2Subnet374F42DD": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "FOD-Network-dev/FOD-VPC/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "Snapdragon-FOD"
     }
    ],
    "VpcId": {
     "Ref": "FODVPC50BE1884"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/PublicSubnet2/Subnet"
   }
  },
  "FODVPCPublicSubnet2RouteTableABC232D9": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "FOD-Network-dev/FOD-VPC/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "Snapdragon-FOD"
     }
    ],
    "VpcId": {
     "Ref": "FODVPC50BE1884"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/PublicSubnet2/RouteTable"
   }
  },
  "FODVPCPublicSubnet2RouteTableAssociationDDECB030": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "FODVPCPublicSubnet2RouteTableABC232D9"
    },
    "SubnetId": {
     "Ref": "FODVPCPublicSubnet2Subnet374F42DD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/PublicSubnet2/RouteTableAssociation"
   }
  },
  "FODVPCPublicSubnet2DefaultRouteC32C85D3": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "FODVPCIGW1032A217"
    },
    "RouteTableId": {
     "Ref": "FODVPCPublicSubnet2RouteTableABC232D9"
    }
   },
   "DependsOn": [
    "FODVPCVPCGW5DD399D6"
   ],
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/PublicSubnet2/DefaultRoute"
   }
  },
  "FODVPCPrivateSubnet1SubnetEC66DD26": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "FOD-Network-dev/FOD-VPC/PrivateSubnet1"
     },
     {
      "Key": "Project",
      "Value": "Snapdragon-FOD"
     }
    ],
    "VpcId": {
     "Ref": "FODVPC50BE1884"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/PrivateSubnet1/Subnet"
   }
  },
  "FODVPCPrivateSubnet1RouteTable8C4B1668": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "FOD-Network-dev/FOD-VPC/PrivateSubnet1"
     },
     {
      "Key": "Project",
      "Value": "Snapdragon-FOD"
     }
    ],
    "VpcId": {
     "Ref": "FODVPC50BE1884"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/PrivateSubnet1/RouteTable"
   }
  },
  "FODVPCPrivateSubnet1RouteTableAssociationF7B1B7A6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "FODVPCPrivateSubnet1RouteTable8C4B1668"
    },
    "SubnetId": {
     "Ref": "FODVPCPrivateSubnet1SubnetEC66DD26"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "FODVPCPrivateSubnet1DefaultRoute5C57181A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "FODVPCPublicSubnet1NATGateway2F221802"
    },
    "RouteTableId": {
     "Ref": "FODVPCPrivateSubnet1RouteTable8C4B1668"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/PrivateSubnet1/DefaultRoute"
   }
  },
  "FODVPCPrivateSubnet2SubnetF96B28BB": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "FOD-Network-dev/FOD-VPC/PrivateSubnet2"
     },
     {
      "Key": "Project",
      "Value": "Snapdragon-FOD"
     }
    ],
    "VpcId": {
     "Ref": "FODVPC50BE1884"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/PrivateSubnet2/Subnet"
   }
  },
  "FODVPCPrivateSubnet2RouteTable13C77AF0": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "FOD-Network-dev/FOD-VPC/PrivateSubnet2"
     },
     {
      "Key": "Project",
      "Value": "Snapdragon-FOD"
     }
    ],
    "VpcId": {
     "Ref": "FODVPC50BE1884"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/PrivateSubnet2/RouteTable"
   }
  },
  "FODVPCPrivateSubnet2RouteTableAssociationC61103BC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "FODVPCPrivateSubnet2RouteTable13C77AF0"
    },
    "SubnetId": {
     "Ref": "FODVPCPrivateSubnet2SubnetF96B28BB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "FODVPCPrivateSubnet2DefaultRoute9077C598": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "FODVPCPublicSubnet1NATGateway2F221802"
    },
    "RouteTableId": {
     "Ref": "FODVPCPrivateSubnet2RouteTable13C77AF0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/PrivateSubnet2/DefaultRoute"
   }
  },
  "FODVPCIGW1032A217": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "FOD-Network-dev/FOD-VPC"
     },
     {
      "Key": "Project",
      "Value": "Snapdragon-FOD"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/IGW"
   }
  },
  "FODVPCVPCGW5DD399D6": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "FODVPCIGW1032A217"
    },
    "VpcId": {
     "Ref": "FODVPC50BE1884"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/VPCGW"
   }
  },
  "FODVPCRestrictDefaultSecurityGroupCustomResource3D78EE08": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "FODVPC50BE1884",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "585473054650"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "FODVPCS3Endpoint2EC226A7": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "FODVPCPrivateSubnet1RouteTable8C4B1668"
     },
     {
      "Ref": "FODVPCPrivateSubnet2RouteTable13C77AF0"
     },
     {
      "Ref": "FODVPCPublicSubnet1RouteTableA88839B7"
     },
     {
      "Ref": "FODVPCPublicSubnet2RouteTableABC232D9"
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".s3"
      ]
     ]
    },
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "FOD-Network-dev/FOD-VPC"
     },
     {
      "Key": "Project",
      "Value": "Snapdragon-FOD"
     }
    ],
    "VpcEndpointType": "Gateway",
    "VpcId": {
     "Ref": "FODVPC50BE1884"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/S3Endpoint/Resource"
   }
  },
  "FODVPCDynamoDBEndpointEDB72A6D": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "FODVPCPrivateSubnet1RouteTable8C4B1668"
     },
     {
      "Ref": "FODVPCPrivateSubnet2RouteTable13C77AF0"
     },
     {
      "Ref": "FODVPCPublicSubnet1RouteTableA88839B7"
     },
     {
      "Ref": "FODVPCPublicSubnet2RouteTableABC232D9"
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".dynamodb"
      ]
     ]
    },
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "FOD-Network-dev/FOD-VPC"
     },
     {
      "Key": "Project",
      "Value": "Snapdragon-FOD"
     }
    ],
    "VpcEndpointType": "Gateway",
    "VpcId": {
     "Ref": "FODVPC50BE1884"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/DynamoDBEndpoint/Resource"
   }
  },
  "FODVPCSecretsManagerEndpointSecurityGroup1370E102": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "FOD-Network-dev/FOD-VPC/SecretsManagerEndpoint/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "FODVPC50BE1884",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "FODVPC50BE1884",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "FOD-Network-dev/FOD-VPC"
     },
     {
      "Key": "Project",
      "Value": "Snapdragon-FOD"
     }
    ],
    "VpcId": {
     "Ref": "FODVPC50BE1884"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/SecretsManagerEndpoint/SecurityGroup/Resource"
   }
  },
  "FODVPCSecretsManagerEndpoint621B28D9": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "FODVPCSecretsManagerEndpointSecurityGroup1370E102",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-1.secretsmanager",
    "SubnetIds": [
     {
      "Ref": "FODVPCPrivateSubnet1SubnetEC66DD26"
     },
     {
      "Ref": "FODVPCPrivateSubnet2SubnetF96B28BB"
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "FOD-Network-dev/FOD-VPC"
     },
     {
      "Key": "Project",
      "Value": "Snapdragon-FOD"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "FODVPC50BE1884"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/FOD-VPC/SecretsManagerEndpoint/Resource"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-east-1:585473054650:security-group/",
             {
              "Fn::GetAtt": [
               "FODVPC50BE1884",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-585473054650-us-east-1",
     "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs22.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
    "aws:asset:property": "Code"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/3WOwW6DQAxEvyX3zZbSL6AoinJJEVRcK7OY1Al40a4XFEX594oEQS49jed5PHKs4493HW1g9FtTX7YtVfpWCJiLgtH/oIn1reyNShsus1RloWrJFKFilImtU26D4DdULa58ZYn31hAIWV7C07A7ZJMcQfYgOMJVZY4GEFyLDyzoGJfA85PZJSJgfjtkUTMpe7PjurfEMkcX+2hqwOBrpkATHMl172zoH6+/grvK0dvgDKo0eLHdahv+Z5U5O1CN7hM8qsR7lELgRHyabr6C9EHuim2N+uzfhjjWcaSjzdkTbV1goQ51/tQ/hx17LZ0BAAA="
   },
   "Metadata": {
    "aws:cdk:path": "FOD-Network-dev/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Description": "VPC ID",
   "Value": {
    "Ref": "FODVPC50BE1884"
   },
   "Export": {
    "Name": "FOD-Network-dev-VpcId"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
